# application-review-service

./: CLAUDE.md  Dockerfile  README.md  curl.txt  debug_entry.py  find.py  pyproject.toml  reqs.txt  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/application/: __init__.py
app/application/use_cases/: __init__.py  get_applications.py  submit_applications.py  update_application.py
app/core/: appliers_config.py  auth.py  config.py  exceptions.py  mongo.py  rabbitmq_client.py  redis_client.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  application.py  cover_letter.py  job.py  resume.py
app/domain/exceptions/: __init__.py  application_exceptions.py
app/domain/ports/: __init__.py  cache.py  message_bus.py  repositories.py
app/domain/value_objects/: __init__.py  application_status.py  correlation_id.py  job_portal.py
app/infrastructure/: __init__.py  container.py
app/infrastructure/cache/: __init__.py  redis_cache_adapter.py
app/infrastructure/repositories/: __init__.py  mongo_application_repository.py  mongo_user_applications_repository.py
app/models/: cover_letter.py  job.py  resume.py
app/routers/: applier_editor.py  healthcheck_router.py
app/schemas/: app_jobs.py
app/services/: application_manager_consumer.py  applier.py  base_applier.py  base_consumer.py  base_publisher.py  career_docs_consumer.py  career_docs_publisher.py  database_cleaner.py  database_consumer.py  database_writer.py  generic_publisher.py  timed_queue_refiller.py
app/tests/: conftest.py  test_db.py  test_rabbit_comm.py  test_redis.py  test_services.py
tests/: conftest.py  test_appliers_config.py  test_consumers.py  test_database_writer.py  test_domain_entities.py  test_domain_value_objects.py  test_generic_publisher.py  test_integration_ddd.py  test_publisher.py  test_redis_client.py  test_routes.py  test_timed_queue_refiller.py
(+1 files in other folders)
