[project]
name = "edit-confirm-applications-pending-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ihcsof", email = "lorenzo.foschi.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    {name = "aio-pika", version = "9.4.3"},
    {name = "aiormq", version = "6.8.1"},
    {name = "annotated-types", version = "0.7.0"},
    {name = "anyio", version = "4.6.2.post1"},
    {name = "bcrypt", version = "4.2.1"},
    {name = "dnspython", version = "2.7.0"},
    {name = "ecdsa", version = "0.19.0"},
    {name = "fastapi", version = "0.115.4"},
    {name = "httpcore", version = "1.0.7"},
    {name = "httptools", version = "0.6.4"},
    {name = "httpx", version = "0.27.2"},
    {name = "loguru", version = "0.7.2"},
    {name = "motor", version = "3.6.0"},
    {name = "pamqp", version = "3.3.0"},
    {name = "pika", version = "1.3.2"},
    {name = "pika-stubs", version = "0.1.3"},
    {name = "pluggy", version = "1.5.0"},
    {name = "propcache", version = "0.2.0"},
    {name = "pydantic", version = "2.9.2"},
    {name = "pydantic-settings", version = "2.6.1"},
    {name = "python-jose", version = "3.3.0"},
    {name = "redis", version = "5.2.0"},
    {name = "sqlalchemy", version = "2.0.36"},
    {name = "starlette", version = "0.41.2"},
    {name = "uvicorn", version = "0.32.0"},
    {name = "watchfiles", version = "0.24.0"},
    {name = "websockets", version = "13.1"},
    {name = "yarl", version = "1.18.0"},
    {name = "email_validator", version = "2.2.0"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true
dependencies = [
    {name = "pytest", version = "8.3.3"},
    {name = "pytest-asyncio", version = "0.24.0"},
    {name = "pytest-mock", version = "3.14.0"}
]